--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KnowWeather</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="my_cities">My Cities</string>
+    <string name="map">Map</string>
 </resources>
